--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Andrea Botero</title>
+    <link rel="icon" href="images/favicon.png">
+    <style>
+        /* Global styling */
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: "Times New Roman", Times, serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: white;
+            overflow: hidden;
+            color: black;
+        }
+        .entering-screen, .main-content {
+            text-align: center;
+        }
 
+        /* Typewriter effect */
+        .typewriter {
+            font-size: 1.8em;
+            overflow: hidden;
+            white-space: nowrap;
+            border-right: 3px solid black;
+            animation: typing 3s steps(30, end), blink-caret 0.75s step-end infinite;
+        }
+        @keyframes typing {
+            from { width: 0; }
+            to { width: 100%; }
+        }
+        @keyframes blink-caret {
+            from, to { border-color: transparent; }
+            50% { border-color: black; }
+        }
+
+        /* Fade out and transition to main content */
+        @keyframes fadeOut {
+            from { opacity: 1; }
+            to { opacity: 0; }
+        }
+        .fade-out {
+            animation: fadeOut 1s forwards;
+        }
+
+        .main-content {
+            display: none;
+            background-color: black;
+            color: white;
+            height: 100vh;
+            text-align: center;
+            padding-top: 20px;
+        }
+
+        /* Contact info styling */
+        .main-content p {
+            font-size: 1.5em;
+            margin: 0;
+        }
+        .contact-info {
+            font-size: 0.9em;
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+
+<div class="entering-screen">
+    <div class="typewriter">Now Entering... 
+      The Archive, 
+      © Andrea Botero.</div>
+</div>
+
+<div class="main-content">
+    <p>The Archives will soon be yours.</p>
+    <div class="contact-info">
+        <p>Reach out to Andrea's team at:</p>
+        <p>Instagram: andreaboterofficial</p>
+        <p>Facebook: Andrea Botero</p>
+    </div>
+</div>
+
+<script>
+    // Transition to main content after typing animation
+    setTimeout(() => {
+        document.querySelector('.entering-screen').classList.add('fade-out');
+        setTimeout(() => {
+            document.querySelector('.entering-screen').style.display = 'none';
+            document.querySelector('.main-content').style.display = 'flex';
+        }, 1000);
+    }, 4000); // Total time for typewriter effect plus fade-out delay
+</script>
+
+</body>
+</html>
