--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
         }
         .entering-screen, .main-content {
             text-align: center;
-            max-width: 100%;
-            padding: 0 10px;
-            box-sizing: border-box;
         }
 
         /* Typewriter effect */
@@ -32,7 +29,7 @@
             overflow: hidden;
             white-space: nowrap;
             border-right: 3px solid black;
-            animation: typing 5s steps(40, end), blink-caret 0.75s step-end infinite;
+            animation: typing 3s steps(30, end), blink-caret 0.75s step-end infinite;
         }
         @keyframes typing {
             from { width: 0; }
@@ -75,14 +72,14 @@
 <body>
 
 <div class="entering-screen">
-    <div class="typewriter">Now Entering... The Archives, © Andrea Botero.</div>
+    <div class="typewriter">Now Entering... The Archive, © Andrea Botero</div>
 </div>
 
 <div class="main-content">
     <p>The Archives will soon be yours.</p>
     <div class="contact-info">
         <p>Reach out to Andrea's team at:</p>
-        <p>Instagram: andreaboterofficial</p>
+        <p>Instagram: @andreaboterofficial</p>
         <p>Facebook: Andrea Botero</p>
     </div>
 </div>
@@ -95,7 +92,7 @@
             document.querySelector('.entering-screen').style.display = 'none';
             document.querySelector('.main-content').style.display = 'flex';
         }, 1000);
-    }, 5000); // Total time for typewriter effect plus fade-out delay
+    }, 4000); // Total time for typewriter effect plus fade-out delay
 </script>
 
 </body>
